[gd_scene load_steps=3 format=3 uid="uid://dl73gcq35ijmy"]

[ext_resource type="Script" uid="uid://d31pov7lsdves" path="res://Modding_tool/Modding_tool.gd" id="1_rbliq"]
[ext_resource type="Script" uid="uid://byx6b7in5f6y" path="res://Modding_tool/outcomes_editor.gd" id="2_p3pmo"]

[node name="Modding" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rbliq")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 359)

[node name="Setting" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 403.0
offset_bottom = 50.0

[node name="Recipe" type="Button" parent="Setting"]
layout_mode = 2
text = "Recipe"

[node name="Outcome" type="Button" parent="Setting"]
layout_mode = 2
text = "Outcome"

[node name="Action" type="Button" parent="Setting"]
layout_mode = 2
text = "Action"

[node name="Item" type="Button" parent="Setting"]
layout_mode = 2
text = "Item"

[node name="Node" type="Button" parent="Setting"]
layout_mode = 2
text = "Node"

[node name="Creature" type="Button" parent="Setting"]
layout_mode = 2
text = "Creature"

[node name="Action" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 1.0
offset_top = 69.0
offset_right = 41.0
offset_bottom = 109.0

[node name="Panel" type="Panel" parent="Action"]
layout_mode = 0
offset_left = 141.0
offset_top = 36.0
offset_right = 582.0
offset_bottom = 443.0

[node name="Labels" type="VBoxContainer" parent="Action"]
layout_mode = 2
offset_left = 350.0
offset_top = 73.0
offset_right = 569.0
offset_bottom = 411.0
theme_override_constants/separation = 13

[node name="name" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Nombre del archivo . tres"

[node name="action_id" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Accion a ejecutar"

[node name="display_name" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Nombre interno del recurso"

[node name="required_tool_type" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Herramienta a necesitar"

[node name="animation" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Animacion"

[node name="base_execution_time" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Tiempo de ejecucion"

[node name="base_stamina_cost" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Coste de estamina"

[node name="edit_outcomes" type="Label" parent="Action/Labels"]
layout_mode = 2
text = "Editar resultado de la accion"

[node name="Nigga" type="HBoxContainer" parent="Action"]
layout_mode = 0
offset_left = 151.0
offset_top = 48.0
offset_right = 564.0
offset_bottom = 386.0

[node name="Setters" type="VBoxContainer" parent="Action/Nigga"]
layout_mode = 2

[node name="Principal" type="Label" parent="Action/Nigga/Setters"]
layout_mode = 2
text = "Modding tool release 1.0"

[node name="name" type="LineEdit" parent="Action/Nigga/Setters"]
layout_mode = 2
placeholder_text = "name"

[node name="action_id" type="LineEdit" parent="Action/Nigga/Setters"]
layout_mode = 2
placeholder_text = "action_id"

[node name="display_name" type="LineEdit" parent="Action/Nigga/Setters"]
layout_mode = 2
placeholder_text = "display_name"

[node name="required_tool_type" type="LineEdit" parent="Action/Nigga/Setters"]
layout_mode = 2
placeholder_text = "required_tool_type"

[node name="animation" type="LineEdit" parent="Action/Nigga/Setters"]
layout_mode = 2
placeholder_text = "animation"

[node name="base_execution_time" type="SpinBox" parent="Action/Nigga/Setters"]
layout_mode = 2
alignment = 2

[node name="base_stamina_cost" type="SpinBox" parent="Action/Nigga/Setters"]
layout_mode = 2
alignment = 2

[node name="Edit_Outcomes" type="Button" parent="Action/Nigga/Setters"]
layout_mode = 2
text = "Editar Outcomes
"

[node name="FileDialog" type="FileDialog" parent="Action/Nigga/Setters"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 1
filters = PackedStringArray("*.tres")

[node name="Save" type="Button" parent="Action/Nigga/Setters"]
layout_mode = 2
text = "Save"

[node name="cargar" type="Button" parent="Action"]
layout_mode = 2
offset_left = 151.0
offset_top = 390.0
offset_right = 341.0
offset_bottom = 421.0
text = "Cargar datos"

[node name="Outcome" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Box_container" type="VBoxContainer" parent="Outcome"]
layout_mode = 0
offset_left = 673.0
offset_top = 70.0
offset_right = 928.0
offset_bottom = 140.0
script = ExtResource("2_p3pmo")

[node name="HBoxContainer" type="HBoxContainer" parent="Outcome/Box_container"]
layout_mode = 2

[node name="OutcomesList" type="ItemList" parent="Outcome/Box_container/HBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="BtnNewOutcome" type="Button" parent="Outcome/Box_container/HBoxContainer"]
layout_mode = 2
text = "Nuevo"

[node name="BtnDeleteOutcome" type="Button" parent="Outcome/Box_container/HBoxContainer"]
layout_mode = 2
text = "Eliminar"

[node name="LblEmpty" type="Label" parent="Outcome/Box_container/HBoxContainer"]
layout_mode = 2
text = "Sin outcomes"

[node name="Close" type="Button" parent="Outcome/Box_container"]
layout_mode = 2
text = "Close"

[node name="OutcomePanel" type="Panel" parent="Outcome/Box_container"]
layout_mode = 2

[node name="OBType" type="OptionButton" parent="Outcome/Box_container/OutcomePanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 61.0
offset_right = 124.0
offset_bottom = 81.0

[node name="LETarget" type="LineEdit" parent="Outcome/Box_container/OutcomePanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 112.0
offset_right = 124.0
offset_bottom = 143.0

[node name="LEValue" type="LineEdit" parent="Outcome/Box_container/OutcomePanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 149.0
offset_right = 125.0
offset_bottom = 180.0

[node name="BtnSaveOutcome" type="Button" parent="Outcome/Box_container/OutcomePanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 188.0
offset_right = 162.0
offset_bottom = 219.0
text = "Guardar Outcome"

[node name="BtnCloseOutcome" type="Button" parent="Outcome/Box_container/OutcomePanel"]
layout_mode = 0
offset_left = 17.0
offset_top = 224.0
offset_right = 75.0
offset_bottom = 255.0
text = "Cerrar"

[connection signal="pressed" from="Setting/Recipe" to="." method="_on_recipe_pressed"]
[connection signal="pressed" from="Setting/Outcome" to="." method="_on_outcome_pressed"]
[connection signal="pressed" from="Setting/Action" to="." method="_on_action_pressed"]
[connection signal="pressed" from="Setting/Item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="Setting/Node" to="." method="_on_node_pressed"]
[connection signal="pressed" from="Setting/Creature" to="." method="_on_creature_pressed"]
[connection signal="pressed" from="Action/Nigga/Setters/Edit_Outcomes" to="." method="_on_edit_outcomes_pressed"]
[connection signal="file_selected" from="Action/Nigga/Setters/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Action/Nigga/Setters/Save" to="." method="_on_btn_guardar_pressed"]
[connection signal="pressed" from="Action/cargar" to="." method="_on_cargar_pressed"]
[connection signal="pressed" from="Outcome/Box_container/Close" to="Outcome/Box_container" method="_on_close_pressed"]
